2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Added.

2015-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* (Announce) First release.