@@ -1,3 +1,7 @@
+2015-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/add_numbers: Added.
+
 2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample: Added.
